<resources>
    <string name="app_name">Github User</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="num_followers">0</string>
    <string name="num_following">0</string>
    <string name="username">Username</string>
    <string name="search_hint">Search User</string>
    <string name="favorite">Favorite?</string>
    <string name="title_fav">Favorites</string>
    <string name="success_remove">\ removed from Favorites</string>
    <string name="success_add">\ added to Favorites</string>
    <string name="error_conn">Failed to connect</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_desc">Change the application themes</string>
    <string name="settings">Settings</string>
    <string name="detail_user">Detail User</string>
</resources>